<resources>
    <string name="_0_0">0.0</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_coinbase_wallet">About Coinbase Wallet</string>
    <string name="accept">Accept</string>
    <string name="accessibility_fingerprint_dialog_help_area">Help message area</string>
    <string name="action_existing_user_backup_desc">"You can now securely backup your Coinbase Wallet's private keys to Google Drive"</string>
    <string name="action_existing_user_backup_title">Introducing Drive backup</string>
    <string name="action_hooray_desc">Why not leave us a rating on the Play Store?</string>
    <string name="action_hooray_title">Hooray!</string>
    <string name="action_mind_telling_us_desc">Your feedback helps us improve. We want to make the app better for you.</string>
    <string name="action_mind_telling_us_title">Mind telling us why?</string>
    <string name="action_new_user_backup_desc">If you lose your recovery phrase you will not be able access your wallet</string>
    <string name="action_new_user_backup_title">Back up recovery phrase</string>
    <string name="action_rate_app_title">Enjoying Coinbase Wallet?</string>
    <string name="activate_secure_lock_screen">Please activate secure lock screen from settings</string>
    <string name="active_network">Default network</string>
    <string name="active_wallet">Active wallet</string>
    <string name="active_wallet_name">Wallet %d</string>
    <string name="add_any_erc20_token">Add any ERC20 Token</string>
    <string name="add_payment_method">Add a payment method</string>
    <string name="add_to_bookmarks">Add to Bookmarks</string>
    <string name="add_verify_payment_methods">Add or verify payment methods</string>
    <string name="added_to_bookmarks">%s added to Bookmarks.</string>
    <string name="address">Address</string>
    <string name="address_copied">Address copied</string>
    <string name="address_hint">Address…</string>
    <string name="address_not_found_alert_body">No valid address was found for this user</string>
    <string name="address_not_found_alert_title">Oops!</string>
    <string name="adjust_miner_fee">Choose speed</string>
    <string name="adjust_miner_fee_sub_header">Estimated time for price range</string>
    <string name="advanced_title">Advanced</string>
    <string name="airdrop_action_item">Tap to claim</string>
    <string name="airdrop_description">From Uniswap &amp; 1Inch</string>
    <string name="airdrop_modal">Airdrops</string>
    <string name="airdrop_title">Claim Airdrop</string>
    <string name="alert_description">Alert</string>
    <string name="already_done_this">I’ve already done this</string>
    <string name="already_have_wallet">I already have a wallet</string>
    <string name="amount">Amount</string>
    <string name="amount1">First amount</string>
    <string name="amount2">Second amount</string>
    <string name="annual_interest">Annual Interest</string>
    <string name="backup_now">Back up now</string>
    <string name="backup_text_body">You will be shown a secret recovery phrase on the next screen. The recovery phrase is the only key to your wallet. It will allow you to recover access to your wallet if your phone is lost or stolen.</string>
    <string name="backup_unable_to_access_account">I understand that if I lose my recovery phrase, I will not be able to access my account.</string>
    <string name="backup_your_wallet">Back up your wallet</string>
    <string name="cancel">Cancel</string>
    <string name="description__restore_wallet">Restore your wallet with the 12 word recovery phrase or with Google Drive</string>
    <string name="error_no_backups_found">No backups found on Google Drive</string>
    <string name="fullscreen_dapp_permission_approve_subtext">You can always disconnect from apps in Settings</string>
    <string name="fullscreen_dapp_permission_bullet1">Connect to crypto apps with your permission and reveal your public address</string>
    <string name="fullscreen_dapp_permission_bullet2">Send you requests for transactions</string>
    <string name="fullscreen_dapp_permission_bullet3">Move funds without your permission</string>
    <string name="fullscreen_dapp_permission_subtitle1">Would like to</string>
    <string name="fullscreen_dapp_permission_subtitle2">Will not be able to</string>
    <string name="fullscreen_dapp_permission_title">Coinbase Wallet extension</string>
    <string name="label__restore_from_cloud">Restore from Google Drive</string>
    <string name="label__restore_manually">Restore with recovery phrase</string>
    <string name="later">Later</string>
    <string name="login_email_hint">you@domain.com</string>
    <string name="login_email_prompt">EMAIL</string>
    <string name="login_first_name_hint">First Name</string>
    <string name="login_first_name_label">FIRST NAME</string>
    <string name="login_last_name_hint">Last Name</string>
    <string name="login_last_name_label">LAST NAME</string>
    <string name="login_password_prompt">PASSWORD</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_certify_agree_acknowledge">" I certify that I am 18 years of age or older, I agree to the &lt;a href=https://www.coinbase.com/legal/user_agreement>User Agreement&lt;/a>, and acknowledge the &lt;a href=https://www.coinbase.com/legal/privacy>Privacy Policy&lt;/a>."</string>
    <string name="signup_password_hint">Create a new password</string>
    <string name="title__restore_wallet">Restore wallet</string>
</resources>