<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/signupContainer" android:background="@color/bluePrimary" android:paddingTop="@dimen/view_size_48" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/clSignupForm" android:background="@drawable/white_box" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/view_size_16" android:layout_marginTop="@dimen/view_size_32" android:layout_marginRight="@dimen/view_size_16" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent">
                <TextView android:id="@id/firstNameHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:text="@string/login_first_name_label" android:layout_marginStart="@dimen/view_size_8" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <EditText android:textSize="@dimen/text_size_13" android:id="@id/firstNameText" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="@dimen/view_size_40" android:hint="@string/login_first_name_hint" android:singleLine="true" android:inputType="textCapSentences" android:importantForAutofill="no" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/firstNameHeader" app:layout_constraintTop_toBottomOf="@id/firstNameHeader" />
                <View android:id="@id/firstLastDivider" android:background="@drawable/list_divider" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/firstNameText" />
                <TextView android:id="@id/lastNameHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:text="@string/login_last_name_label" app:layout_constraintLeft_toLeftOf="@id/firstNameHeader" app:layout_constraintTop_toBottomOf="@id/firstLastDivider" />
                <EditText android:textSize="@dimen/text_size_13" android:id="@id/lastNameText" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="@dimen/view_size_40" android:hint="@string/login_last_name_hint" android:singleLine="true" android:inputType="textCapSentences" android:importantForAutofill="no" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/lastNameHeader" app:layout_constraintTop_toBottomOf="@id/lastNameHeader" />
                <View android:id="@id/lastEmailDivider" android:background="@drawable/list_divider" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lastNameText" />
                <TextView android:id="@id/emailHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:text="@string/login_email_prompt" app:layout_constraintLeft_toLeftOf="@id/firstNameHeader" app:layout_constraintTop_toBottomOf="@id/lastEmailDivider" />
                <EditText android:textSize="@dimen/text_size_13" android:id="@id/emailText" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="@dimen/view_size_40" android:hint="@string/login_email_hint" android:singleLine="true" android:inputType="textEmailAddress" android:importantForAutofill="no" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/emailHeader" app:layout_constraintTop_toBottomOf="@id/emailHeader" />
                <View android:id="@id/emailPassDivider" android:background="@drawable/list_divider" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="1.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/emailText" />
                <TextView android:id="@id/passwordHeader" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:text="@string/login_password_prompt" app:layout_constraintLeft_toLeftOf="@id/firstNameHeader" app:layout_constraintTop_toBottomOf="@id/emailPassDivider" />
                <EditText android:textSize="@dimen/text_size_13" android:id="@id/passwordText" android:background="@android:color/transparent" android:layout_width="0.0dip" android:layout_height="@dimen/view_size_40" android:hint="@string/signup_password_hint" android:singleLine="true" android:inputType="textPassword" android:importantForAutofill="no" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/passwordHeader" app:layout_constraintTop_toBottomOf="@id/passwordHeader" />
                <View android:id="@id/passVerificationDivider" android:background="@drawable/list_divider" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/view_size_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/passwordText" />
                <TextView android:textColor="@color/grey_60" android:id="@id/userAgreementHeader" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:text="@string/sign_up_certify_agree_acknowledge" android:lineSpacingExtra="@dimen/view_size_4" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/userAgreementCheckbox" app:layout_constraintTop_toBottomOf="@id/passVerificationDivider" />
                <CheckBox android:theme="@style/CheckBox" android:id="@id/userAgreementCheckbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/view_size_16" app:layout_constraintBottom_toBottomOf="@id/userAgreementHeader" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/userAgreementHeader" />
                <View android:id="@id/verificationSignupDivider" android:background="@drawable/list_divider" android:visibility="visible" android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_marginTop="@dimen/view_size_8" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/userAgreementHeader" />
                <Button android:enabled="false" android:layout_gravity="center_horizontal" android:id="@id/nextButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/sign_up" android:filterTouchesWhenObscured="true" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/verificationSignupDivider" style="@style/FlatButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <ProgressBar android:layout_gravity="center" android:id="@id/progressSignUp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</FrameLayout>