<?xml version="1.0" encoding="utf-8"?>
<merge android:background="@color/white"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/cb_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="75.0dip" android:src="@drawable/ic_extension_cb_logo" android:layout_marginStart="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textColor="#ff000000" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_20" android:text="@string/fullscreen_dapp_permission_title" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/cb_logo" style="@style/Title20Semibold" />
    <TextView android:textColor="#ff071422" android:id="@id/subtitle1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_32" android:text="@string/fullscreen_dapp_permission_subtitle1" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" style="@style/DefaultBold16Medium" />
    <ImageView android:id="@id/court_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_16" android:src="@drawable/ic_extension_court" android:layout_marginStart="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subtitle1" />
    <TextView android:textColor="#ff000000" android:id="@id/bullet1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fullscreen_dapp_permission_bullet1" android:lineSpacingExtra="5.0sp" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/court_icon" app:layout_constraintTop_toTopOf="@id/court_icon" style="@style/Default16Regular" />
    <ImageView android:id="@id/checkmark_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_16" android:src="@drawable/ic_extension_check_mark" android:layout_marginStart="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/bullet1" />
    <TextView android:textColor="#ff000000" android:id="@id/bullet2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fullscreen_dapp_permission_bullet2" android:lineSpacingExtra="5.0sp" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toTopOf="@id/checkmark_icon" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/checkmark_icon" app:layout_constraintTop_toBottomOf="@id/checkmark_icon" style="@style/Default16Regular" />
    <TextView android:textColor="#ff071422" android:id="@id/subtitle2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_32" android:text="@string/fullscreen_dapp_permission_subtitle2" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/checkmark_icon" style="@style/DefaultBold16Medium" />
    <ImageView android:id="@id/icon_x" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:src="@drawable/ic_extension_x" android:layout_marginStart="@dimen/view_size_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subtitle2" />
    <TextView android:textColor="#ff000000" android:id="@id/bullet3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/fullscreen_dapp_permission_bullet3" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toTopOf="@id/icon_x" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/icon_x" app:layout_constraintTop_toBottomOf="@id/icon_x" style="@style/Default16Regular" />
    <TextView android:textColor="#ffaaaaaa" android:gravity="center" android:id="@id/cta_subtext" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_16" android:text="@string/fullscreen_dapp_permission_approve_subtext" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toTopOf="@id/allowButton" app:layout_constraintEnd_toStartOf="parent" app:layout_constraintStart_toEndOf="parent" style="@style/Detail13Regular" />
    <com.coinbase.wallet.commonui.views.ProgressBarButton android:enabled="false" android:textSize="@dimen/text_size_subtitle" android:id="@id/allowButton" android:background="@drawable/button_primary" android:layout_width="fill_parent" android:layout_height="@dimen/view_size_56" android:layout_marginTop="@dimen/view_size_32" android:layout_marginBottom="@dimen/view_size_8" android:foreground="@drawable/background_rounded_ripple_16dp" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintBottom_toTopOf="@id/cancel" app:progressBarText="Allow" style="@style/FlatButton" />
    <Button android:textSize="@dimen/text_size_16" android:textColor="@color/primary_blue" android:id="@id/cancel" android:layout_width="fill_parent" android:layout_height="@dimen/view_size_56" android:layout_marginBottom="@dimen/view_size_16" android:foreground="@drawable/background_rounded_ripple_16dp" android:text="@string/cancel" android:textAllCaps="false" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintBottom_toBottomOf="parent" style="@style/FlatButton" />
</merge>