<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.coinbase.wallet.commonui.views.StatusBarSpace android:id="@id/statusBarSpace" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:layout_width="0.0dip" android:layout_height="wrap_content" android:scaleType="fitXY" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_onboard_recovery" />
    <ImageButton android:id="@id/backButton" android:background="@drawable/ic_arrow_back" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_24" android:layout_marginStart="@dimen/view_size_16" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/statusBarSpace" />
    <TextView android:textSize="@dimen/onboarding_title" android:textStyle="bold" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_24" android:text="@string/title__restore_wallet" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintBottom_toTopOf="@id/description" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="@dimen/text_size_subtitle" android:textColor="@color/textColorSecondaryDark" android:id="@id/description" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_8" android:layout_marginBottom="@dimen/view_size_32" android:text="@string/description__restore_wallet" android:fontFamily="@font/coinbase_sans" app:layout_constraintBottom_toTopOf="@id/googleDriveRestore" app:layout_constraintEnd_toEndOf="@id/title" app:layout_constraintStart_toStartOf="@id/title" />
    <Button android:textSize="@dimen/text_size_subtitle" android:textColor="@color/textColorContrast" android:id="@id/googleDriveRestore" android:background="@drawable/button_primary" android:padding="@dimen/onboarding_button_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_16" android:text="@string/label__restore_from_cloud" android:textAllCaps="false" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toTopOf="@id/manualRestore" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/FlatButton" />
    <TextView android:textSize="@dimen/text_size_default" android:textColor="@color/grey_80" android:id="@id/noBackupsFoundMessage" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_16" android:text="@string/error_no_backups_found" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toTopOf="@id/manualRestore" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="@dimen/text_size_subtitle" android:textColor="@color/colorPrimary" android:gravity="center" android:id="@id/manualRestore" android:padding="@dimen/onboarding_button_padding" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_24" android:text="@string/label__restore_manually" android:layout_marginStart="@dimen/view_size_24" android:layout_marginEnd="@dimen/view_size_24" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/FlatButton" />
</androidx.constraintlayout.widget.ConstraintLayout>