<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/windowBackground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.coinbase.wallet.commonui.views.StatusBarSpace android:id="@id/statusBarSpace" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent" />
    <ImageView android:id="@id/backupSafeImage" android:paddingTop="@dimen/view_size_32" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/illustration_safe" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/statusBarSpace" />
    <TextView android:textSize="@dimen/text_size_24" android:textStyle="bold" android:id="@id/backupTitle" android:paddingTop="@dimen/view_size_12" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backup_your_wallet" android:layout_marginStart="@dimen/text_size_24" android:layout_marginEnd="@dimen/text_size_24" app:layout_constraintTop_toBottomOf="@id/backupSafeImage" />
    <TextView android:textSize="@dimen/text_size_16" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/view_size_12" android:text="@string/backup_text_body" android:layout_marginStart="@dimen/text_size_24" android:layout_marginEnd="@dimen/text_size_24" app:layout_constraintTop_toBottomOf="@id/backupTitle" />
    <androidx.constraintlayout.helper.widget.Layer android:id="@id/checkboxLayer" android:paddingTop="10.0dip" android:paddingBottom="@dimen/view_size_10" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="backupCheckbox, backupCheckboxText" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <CheckBox android:theme="@style/CheckBox" android:gravity="center" android:id="@id/backupCheckbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_16" android:textAlignment="center" android:layout_marginStart="@dimen/text_size_12" app:layout_constraintBottom_toTopOf="@id/backupNowButton" app:layout_constraintStart_toStartOf="parent" style="@style/Detail13Regular" />
    <TextView android:id="@id/backupCheckboxText" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/backup_unable_to_access_account" android:layout_marginStart="@dimen/view_size_12" android:layout_marginEnd="@dimen/text_size_24" app:layout_constraintBottom_toBottomOf="@id/backupCheckbox" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/backupCheckbox" app:layout_constraintTop_toTopOf="@id/backupCheckbox" />
    <Button android:enabled="false" android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/backupNowButton" android:background="@drawable/button_primary" android:layout_width="0.0dip" android:layout_height="@dimen/button_height_xlarge" android:layout_marginTop="@dimen/view_size_40" android:layout_marginBottom="@dimen/view_size_16" android:text="@string/backup_now" android:textAllCaps="false" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintBottom_toTopOf="@id/backupLaterButton" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/FlatButton" />
    <Button android:enabled="false" android:textSize="16.0sp" android:textColor="@color/disabled_blue" android:id="@id/backupLaterButton" android:background="?selectableItemBackground" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/view_size_52" android:text="@string/later" android:textAllCaps="false" android:layout_marginStart="@dimen/view_size_16" android:layout_marginEnd="@dimen/view_size_16" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>